# SupportAgent

./: .env.example  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/agents/: security-fixer.agent.md  security-scanner.agent.md
.github/workflows/: copilot-setup-steps.yml  update-wiki.yml
codesentry/: __init__.py  __main__.py  api.py  cli.py  config.py  cwe_mapping.py  file_filter.py  models.py  orchestrator.py  project_detector.py  report_generator.py
codesentry/rules/: cwe_owasp_map.yaml  license_policies.yaml  secret_patterns.yaml
codesentry/scanners/: __init__.py  api_scanner.py  base_scanner.py  code_scanner.py  compliance_scanner.py  container_scanner.py  dast_scanner.py  dependency_scanner.py  iac_scanner.py  license_scanner.py  secret_scanner.py  supply_chain_scanner.py
codesentry/templates/: report.md.jinja2
config/: error_patterns.yaml  prometheus.yml
docs/: AZURE_SETUP.md  PILOT_USER_STORIES.md  SupportAgent_Backlog.xlsx  azure-deployment-guide.md  testing-langsmith-azure.md
functions/: function_app.py  local.settings.json  requirements.txt
infrastructure/: init.sql  prometheus.yml
scripts/: init-db.sql  map-files-to-wiki.sh  send_test_incident.py  test_e2e_azure.py  test_langsmith_local.py  test_servicebus.py  update-wiki-pages.sh  validate_connections.py
security_fixer/: __init__.py  __main__.py  auto_fixer.py  branch_manager.py  cli.py  engine.py  github_fetcher.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  diagnose_agent.py  (+4 more)
tests/: conftest.py  requirements-test.txt  run_local_test.py
(+55 files in other folders)
