[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesentry"
version = "0.1.0"
description = "Local code security scanner with CWE/OWASP mapping — like GitHub Advanced Security for any codebase"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "CodeSentry Contributors"}]
keywords = ["security", "scanner", "sast", "cwe", "owasp", "sarif"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
sast = ["semgrep>=1.50.0", "bandit>=1.7.7"]
deps = ["pip-audit>=2.7.0"]
secrets = ["detect-secrets>=1.4.0"]
iac = ["checkov>=3.2.0"]
all = [
    "semgrep>=1.50.0",
    "bandit>=1.7.7",
    "pip-audit>=2.7.0",
    "detect-secrets>=1.4.0",
    "checkov>=3.2.0",
]

[project.scripts]
codesentry = "codesentry.cli:main"
security-fixer = "security_fixer.cli:main"

[tool.setuptools.packages.find]
include = ["codesentry*", "security_fixer*"]

[tool.setuptools.package-data]
codesentry = ["rules/**/*.yaml", "rules/**/*.yml", "templates/**/*", "py.typed"]
